module(
    name = "otel_sdk",
    version = "1.21.0",
    compatibility_level = 0,
)

bazel_dep(name = "abseil-cpp", version = "20250512.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.17.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "boringssl", version = "0.20250514.0")
bazel_dep(name = "curl", version = "8.8.0.bcr.3")
bazel_dep(name = "depend_on_what_you_use", version = "0.9.0")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")
bazel_dep(name = "rules_go", version = "0.54.1")
bazel_dep(name = "gazelle", version = "0.43.0")
bazel_dep(name = "stardoc", version = "0.8.0")
bazel_dep(name = "rules_android", version = "0.6.4")
bazel_dep(name = "grpc", version = "1.72.0")
single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = [
        "bazel/grpc_no_absl_sync.patch",
    ],
)
bazel_dep(name = "nlohmann_json", version = "3.12.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
bazel_dep(name = "opentracing-cpp", version = "1.6.0")
bazel_dep(name = "rules_multitool", version = "1.3.0")
bazel_dep(name = "protoc-gen-validate", version = "1.2.1.bcr.1")
bazel_dep(name = "c-ares", version = "1.34.5")
archive_override(
    module_name = "c-ares", 
    urls=["https://github.com/malkia/c-ares/archive/refs/tags/v1.34.5-bazel.tar.gz"],
    integrity = "sha256-QItVHP1adgblywbel9M7cgFSehKhzHO6CrVe8/ynEls=",
    strip_prefix="c-ares-1.34.5-bazel",
)
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "opentelemetry-proto", version = "1.6.0")
bazel_dep(name = "prometheus-cpp", version = "1.3.0.bcr.2")
bazel_dep(name = "civetweb", version = "1.16.bcr.1")

use_repo(
    use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension"),
    "local_config_cc",
)

# This is needed only for most of the `bazel mod xxx` functions to work.
#
# Otherwise it complaints with
#
# ERROR: in tag at https://bcr.bazel.build/modules/grpc-java/1.62.2/MODULE.bazel:89:15: no repository visible as
#        '@com_google_protobuf_javalite' to the repository '@@grpc-java+', but referenced by label
#        '@com_google_protobuf_javalite//:protobuf_javalite' in attribute 'target' of tag 'override'.
#      Is the module 'grpc-java' missing a bazel_dep or use_repo(..., "com_google_protobuf_javalite")?.
#
bazel_dep(name = "grpc-java", version = "1.71.0")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "@otel_sdk//:multitool.lock.json")
use_repo(multitool, "multitool")
